<resources>
    <string name="app_name">LoginScreen</string>
    <string name="log_in">Log In</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="license">Лицензионное соглашение</string>
    <string name="email_enter">Email:</string>
    <string name="password_enter">Password:</string>
    <string name="success">Log in Success!</string>
</resources>